--- a/src/main/docs/map.adoc
+++ b/src/main/docs/map.adoc
@@ -389,3 +389,43 @@ include::output/map_display_8_command.txt[]
 include::output/map_display_8_result.txt[]
 
 image::map_display.png[]
+
+=== Map Cube
+
+include::commands/map_cube_description.txt[]
+
+include::output/map_cube_8_command.txt[]
+
+include::commands/map_cube.txt[]
+
+include::output/map_cube_0_command.txt[]
+include::output/map_cube_0_result.txt[]
+
+include::output/map_cube_1_command.txt[]
+include::output/map_cube_1_result.txt[]
+
+include::output/map_cube_2_command.txt[]
+include::output/map_cube_2_result.txt[]
+
+include::output/map_cube_3_command.txt[]
+include::output/map_cube_3_result.txt[]
+
+include::output/map_cube_4_command.txt[]
+include::output/map_cube_4_result.txt[]
+
+include::output/map_cube_5_command.txt[]
+include::output/map_cube_5_result.txt[]
+
+include::output/map_cube_6_command.txt[]
+include::output/map_cube_6_result.txt[]
+
+include::output/map_cube_7_command.txt[]
+include::output/map_cube_7_result.txt[]
+
+include::output/map_cube_8_command.txt[]
+include::output/map_cube_8_result.txt[]
+
+include::output/map_cube_9_command.txt[]
+include::output/map_cube_9_result.txt[]
+
+image::map_cube.png[]
